# G-CPP-500-PAR-5-1-rtype-4-miroir

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Dockerfile  Doxyfile  Makefile  README.md  architecture.plantuml  cmake_install.cmake  docker-compose.yml  gameSequence.plantuml  r-type_client  r-type_server
ecs/: CMakeLists.txt
ecs/include/: Components.hpp  System.hpp
ecs/src/: System.cpp  main.cpp
project/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
project/client/: CMakeLists.txt  CTestTestfile.cmake  Makefile  client_tests  client_tests-b12d07c_include.cmake  client_tests-b12d07c_tests.cmake  cmake_install.cmake
project/client/include/: Client.hpp  ClientApp.hpp  RenderLoop.hpp  ResourceManager.hpp
project/client/src/: Client.cpp  ClientApp.cpp  RenderLoop.cpp  ResourceManager.cpp  main.cpp
project/client/tests/: ClientTest.cpp
project/components/include/: Drawable.hpp
project/engine/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
project/engine/components/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
project/engine/components/include/: Animation.hpp  Collision.hpp  Controllable.hpp  Drawable.hpp  EnemyAI.hpp  Friction.hpp  Gravity.hpp  Healt.hpp  Health.hpp  Player.hpp  Position.hpp  Projectile.hpp  Sound.hpp  Sprite.hpp  Velocity.hpp  WIndowSize.hpp
project/engine/ecs/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ecs_tests  ecs_tests-b12d07c_include.cmake  ecs_tests-b12d07c_tests.cmake  engine_tests-b12d07c_include.cmake
project/engine/ecs/include/: Entity.hpp  IndexedZipper.hpp  Registry.hpp  SparseArray.hpp
project/engine/ecs/src/: Entity.cpp  Registry.cpp
project/engine/ecs/tests/: EntityTest.cpp  RegistryTest.cpp
project/engine/game/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  game_tests  game_tests-b12d07c_include.cmake  game_tests-b12d07c_tests.cmake
project/engine/game/include/: GameInstance.hpp  GameRunner.hpp  SystemManager.hpp
project/engine/game/src/: GameInstance.cpp  GameRunner.cpp  SystemManager.cpp
project/engine/game/tests/: GameEventTest.cpp  GameInstanceTest.cpp  MapLoaderTest.cpp  MapTest.cpp  SystemManagerTest.cpp
project/engine/include/: SparseArray.hpp
project/engine/network/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  network_tests  network_tests-b12d07c_include.cmake  network_tests-b12d07c_tests.cmake
project/engine/network/include/: AsioNetworkTransport.hpp  DefaultMessageSerializer.hpp  IMessageSerializer.hpp  INetworkTransport.hpp  IReliableLayer.hpp  MessageHeader.hpp  MessageType.hpp  NetworkContext.hpp  Packets.hpp  ReliableChannel.hpp  ReliableLayerAdapter.hpp  Room.hpp  RoomManager.hpp  SnapshotInterpolator.hpp  Utils.hpp
project/engine/network/src/: AsioNetworkTransport.cpp  DefaultMessageSerializer.cpp  NetworkContext.cpp  Packets.cpp  ReliableChannel.cpp  ReliableLayerAdapter.cpp  RoomManager.cpp  SnapshotInterpolator.cpp  Utils.cpp
project/engine/network/tests/: MessageHeaderTest.cpp  MessageTypeTest.cpp  PacketTest.cpp  SerializerTest.cpp
project/engine/src/: Registry.cpp
project/engine/systems/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
project/engine/systems/ai_system/: AISystemTest  AISystemTest-b12d07c_include.cmake  AISystemTest-b12d07c_tests.cmake  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
project/engine/systems/animation_system/: AnimationSystemTest-b12d07c_include.cmake  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
project/engine/systems/cleanup_system/: CMakeLists.txt  CTestTestfile.cmake  CleanupSystemTest  CleanupSystemTest-b12d07c_include.cmake  CleanupSystemTest-b12d07c_tests.cmake  Makefile  cmake_install.cmake
project/engine/systems/client_network_system/: CMakeLists.txt  CTestTestfile.cmake  ClientNetworkSystemTest-b12d07c_include.cmake  Makefile  cmake_install.cmake
project/engine/systems/collision_system/: CMakeLists.txt  CTestTestfile.cmake  CollisionSystemTest  CollisionSystemTest-b12d07c_include.cmake  CollisionSystemTest-b12d07c_tests.cmake  Makefile  cmake_install.cmake
project/engine/systems/control_system/: CMakeLists.txt  CTestTestfile.cmake  ControlSystemTest  ControlSystemTest-b12d07c_include.cmake  ControlSystemTest-b12d07c_tests.cmake  Makefile  cmake_install.cmake
project/engine/systems/include/: ISystem.hpp  SystemCatalog.hpp  (+1 more)
project/engine/tests/: EntityTest.cpp
project/engine/tools/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tools_tests  tools_tests-b12d07c_include.cmake  tools_tests-b12d07c_tests.cmake
project/game/: CMakeLists.txt
project/game/src/: GameInstance.cpp
project/game/tests/: GameInstanceTest.cpp
project/network/: CMakeLists.txt
project/network/include/: MessageType.hpp  Packets.hpp
project/server/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  server_tests  server_tests-b12d07c_include.cmake  server_tests-b12d07c_tests.cmake
project/server/include/: Connection.hpp  GameInstance.hpp  LobbyManager.hpp  ReliableChannel.hpp  Server.hpp
project/server/src/: LobbyManager.cpp  ReliableChannel.cpp  Server.cpp  main.cpp
project/server/tests/: ConnectionTest.cpp  LobbyManagerTest.cpp  ReliableChannelTest.cpp  ServerTest.cpp
project/systems/ai_system/: CMakeLists.txt
project/systems/cleanup_system/: CMakeLists.txt
project/systems/collision_system/: CMakeLists.txt
project/systems/control_system/: CMakeLists.txt
project/systems/include/: ISystem.hpp
project/systems/physics_system/: CMakeLists.txt
project/systems/position_system/: CMakeLists.txt
project/systems/projectile_system/: CMakeLists.txt
project/systems/render_system/: CMakeLists.txt
project/systems/sound_system/: CMakeLists.txt
project/systems/spawn_system/: CMakeLists.txt
project/tools/: CMakeLists.txt
project/tools/tests/: ConfigManagerTest.cpp  LoggerTest.cpp  TestHarnessTest.cpp
(+130 files in other folders)
